# AI-Agent-Scaffold

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
ai_agent_scaffold/: __init__.py
ai_agent_scaffold/adapters/: __init__.py  moonshot.py  tongyi.py  volcano.py  zhipu.py
ai_agent_scaffold/cli/: __init__.py  main.py
ai_agent_scaffold/core/: __init__.py  base.py  config.py  exceptions.py  factory.py
ai_agent_scaffold/frameworks/: __init__.py  autogen_integration.py  crewai_integration.py  langchain_integration.py  langgraph_integration.py  llamaindex_integration.py  metagpt_integration.py  pocketflow_integration.py
docs/: Makefile  conf.py  index.rst  quickstart.rst
examples/: agent_frameworks_demo.py  basic_llm_usage.py  intelligent_customer_service.py
tests/: __init__.py  test_core.py
